Fix build with jdk8
- Remove non jdk8 code used in #694